# charvis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  EXECUTION_PLAN.md  EXTERNAL_ACTIONS.md  MACHINE_SETUP.md  MVP.md  Makefile  README.md  TECH_STACK.md  docker-compose.yml
brain/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
brain/app/: capture.py  config.py  deps.py  main.py  schemas.py  telemetry.py
brain/app/api/: approvals.py  calendar.py  capture.py  chat.py  dashboard.py  gmail.py  google_oauth.py  health.py  knowledge.py  lifemodel.py  memory.py  state.py
brain/app/calendar_actions/: __init__.py  conflicts.py  execute.py  matching.py  (+6 more)
brain/tests/: calendar_action_helpers.py  conftest.py  gmail_helpers.py  test_approvals_api.py  test_briefing.py  test_calendar.py  test_calendar_actions_service.py  test_calendar_actions_store.py  test_calendar_api.py  test_calendar_conflicts.py  test_calendar_matching.py  test_calendar_parse.py  test_calendar_resolve.py  test_calendar_snapshots.py  test_calendar_write_scope.py  test_capture_api.py  test_chat_api.py  test_classify.py  test_commitment_parse.py  test_context_intents.py  test_context_resolver.py  test_context_service.py  test_conversation.py  test_crypto.py  test_dashboard.py  test_deadlines.py  test_email_handler.py  test_email_intents.py  test_gmail_api.py  test_gmail_connector.py  test_gmail_format.py  test_gmail_scope.py  test_gmail_sync.py  test_google_oauth.py  test_google_oauth_api.py  test_health.py  test_intents.py  test_intents_2d3.py  test_knowledge_api.py  test_knowledge_engine.py  (+34 more)
(+120 files in other folders)
